# clipshare

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: test.yml
clip_client/: Cargo.toml
clip_client/src/: api.rs  clipboard_ops.rs  config.rs  daemon.rs  main.rs  models.rs
clip_server/: Cargo.toml
clip_server/src/: auth.rs  config.rs  handlers.rs  lib.rs  main.rs  models.rs
clip_token_gen/: Cargo.toml
clip_token_gen/src/: main.rs
services/: README.md  clipshare-daemon.service  clipshare-startup.bat  com.clipshare.daemon.plist  install-clipshare-service.ps1
tests/: Cargo.toml  e2e_tests.rs
tests/src/: e2e_tests.rs  lib.rs
