[package]
name = "clip_client"
version.workspace = true
edition.workspace = true

[dependencies]
# HTTP client for making requests to the server
reqwest = { version = "0.11", features = ["json"] }
# Cross-platform clipboard library (supports Windows, macOS, Linux X11/Wayland)
arboard = "3.2"
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# Error handling
anyhow = "1.0"
# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Base64 encoding for binary data
base64 = "0.21"
# PNG decoding for image clipboard support
png = "0.17"
