[package]
name = "clip_server"
version.workspace = true
edition.workspace = true

[dependencies]
# Web framework for building the REST API
axum = "0.7"
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async runtime primitives for sharing state
arc-swap = "1.6"
# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# HTTP types and utilities
http-body-util = "0.1"
# Environment variable handling
dotenvy = "0.15"
