[package]
name = "clip_server"
version.workspace = true
edition.workspace = true

[lib]
name = "clip_server"
path = "src/lib.rs"

[[bin]]
name = "clip_server"
path = "src/main.rs"

[dependencies]
# Web framework for building the REST API
axum = "0.7"
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async runtime primitives for sharing state
arc-swap = "1.6"
# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# HTTP types and utilities
http-body-util = "0.1"
# Environment variable handling
dotenvy = "0.15"
# Additional HTTP utilities
mime = "0.3"
# Base64 encoding for binary data
base64 = "0.21"

[dev-dependencies]
# HTTP client for testing
reqwest = { version = "0.11", features = ["json"] }
# Async test utilities
tokio-test = "0.4"
# Test environment handling
serial_test = "3.0"
